<resources>
    <string name="app_name">Qremind</string>

    <!-- Strings -->
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- hint strings -->
    <string name="hint_vendor_name">Enter vendor name</string>
    <string name="hint_vendor_category">Enter shop category</string>
    <string name="hint_vendor_location">Enter shop location</string>
    <string name="hint_vendor_email">something@xxxxx.com</string>
    <string name="hint_vendor_number">Enter shop phone number</string>
    <string name="hint_fname">Enter first name</string>
    <string name="hint_lname">Enter last name</string>
    <string name="hint_phone_no">Enter phone number</string>
    <string name="hint_email">something@xxxxx.com</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_confirmpassword">Confirm Password</string>
    <string name="hint_email_hp_no">Email/Hp No</string>

    <!-- text string -->
    <string name="text_cust_login">Customer Login</string>
    <string name="text_vendor_login">Vendor Login</string>
    <string name="text_pax_number">No. of pax</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_email">Email</string>
    <string name="text_phone_no">Phone No</string>
    <string name="text_password">Password</string>
    <string name="text_confimed_pwd">Confirm Password</string>
    <string name="text_customer">Customer</string>
    <string name="text_vendor">Vendor</string>
    <string name="text_role">Role</string>
    <string name="text_register">Register</string>
    <string name="text_update">Update</string>
    <string name="text_shop_name">Shop Name</string>
    <string name="text_category">Category</string>
    <string name="text_location">Location</string>
    <string name="text_telephone">Telephone</string>
    <string name="text_logout">Logout</string>
    <string name="text_login">Log In</string>
    <string name="text_create_account">Create Account</string>
    <string name="text_allow">Allow</string>
    <string name="text_require_for_time_extension">Queue no request for time extension</string>
    <string name="text_next">Next</string>
    <string name="text_current_queue_number">Current Queue No.</string>
    <string name="text_number_of_people_served">No. of people served</string>
    <string name="text_number_of_people_in_queue">No. of people in Queue</string>
    <string name="text_new_queue">New Queue</string>
    <string name="text_please_rate_service">Wait before you go, please rate the service</string>
    <string name="text_claim">Claim</string>
    <string name="text_currently_serving">Currently Serving</string>
    <string name="text_your_queue_no">Your Queue No</string>
    <string name="text_estimated_waiting_time">Estimated Waiting Time</string>
    <string name="text_refresh">Refresh</string>
    <string name="text_10_mins_time_extension">10 mins time extension</string>
    <string name="text_get_queue">Get Queue</string>
    <string name="text_ratings">Ratings</string>
    <string name="text_manage_queue">Manage Queue</string>
    <string name="text_settings">Settings</string>

    <!-- Firebase URL Links -->
    <string name="fb_main_link">https://qremind1.firebaseio.com</string>
    <string name="fb_appuseracc_cust">https://qremind1.firebaseio.com/AppUserAccount/Customer</string>
    <string name="fb_appuseracc_vendor">https://qremind1.firebaseio.com/AppUserAccount/Vendor</string>

    <!-- SharedPrefences strings -->
    <string name="shared_pref_main">qremind_app</string>

</resources>
