<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1"
                android:background="#efefef">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView android:id="@+id/businessProf_picture"
                android:src="@drawable/unknown_building"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:layout_weight="0.26"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>

            <TextView android:id="@+id/businessProf_shopName_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_shop_name"
                android:layout_below="@+id/businessProf_picture"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <EditText android:id="@+id/businessProf_shopName_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_vendor_name"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/businessProf_shopName_TV"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <TextView android:id="@+id/businessProf_category_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_category"
                android:layout_below="@+id/businessProf_shopName_ET"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <EditText android:id="@+id/businessProf_category_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_vendor_category"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/businessProf_category_TV"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <TextView android:id="@+id/businessProf_location_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_location"
                android:layout_below="@+id/businessProf_category_ET"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <EditText android:id="@+id/businessProf_location_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_vendor_location"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/businessProf_location_TV"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <TextView android:id="@+id/businessProf_email_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_email"
                android:layout_below="@+id/businessProf_location_ET"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <EditText android:id="@+id/businessProf_email_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_vendor_email"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/businessProf_email_TV"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <TextView android:id="@+id/businessProf_telephone_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_telephone"
                android:layout_below="@+id/businessProf_email_ET"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <EditText android:id="@+id/businessProf_telephone_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_vendor_number"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/businessProf_telephone_TV"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <Button android:id="@+id/savebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                android:layout_gravity="center_horizontal"
                android:background="#02bbd2"
                android:clickable="true"
                android:layout_marginBottom="10dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/businessProf_telephone_ET"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>